docs/api/qiskit/0.24/qiskit.extensions.Snapshot.mdx
---
title: Snapshot
description: API reference for qiskit.extensions.Snapshot
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.extensions.Snapshot
---

<span id="qiskit-extensions-snapshot" />

# qiskit.extensions.Snapshot

<Class id="qiskit.extensions.Snapshot" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/extensions/simulator/snapshot.py" signature="Snapshot(label, snapshot_type='statevector', num_qubits=0, num_clbits=0, params=None)" modifiers="class">
  Simulator snapshot instruction.

  Create new snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label for result data.
  *   **snapshot\_type** (*str*) – the type of the snapshot.
  *   **num\_qubits** (*int*) – the number of qubits for the snapshot type \[Default: 0].
  *   **num\_clbits** (*int*) – the number of classical bits for the snapshot type \[Default: 0].
  *   **params** (*list or None*) – the parameters for snapshot\_type \[Default: None].

  **Raises**

  **ExtensionError** – if snapshot label is invalid.

  ### \_\_init\_\_

  <Function id="qiskit.extensions.Snapshot.__init__" signature="__init__(label, snapshot_type='statevector', num_qubits=0, num_clbits=0, params=None)">
    Create new snapshot instruction.

    **Parameters**

    *   **label** (*str*) – the snapshot label for result data.
    *   **snapshot\_type** (*str*) – the type of the snapshot.
    *   **num\_qubits** (*int*) – the number of qubits for the snapshot type \[Default: 0].
    *   **num\_clbits** (*int*) – the number of classical bits for the snapshot type \[Default: 0].
    *   **params** (*list or None*) – the parameters for snapshot\_type \[Default: None].

    **Raises**

    **ExtensionError** – if snapshot label is invalid.
  </Function>

  ## Methods

  |                                                                                                                                         |                                                                          |
  | --------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.extensions.Snapshot.__init__ "qiskit.extensions.Snapshot.__init__")(label\[, snapshot\_type, num\_qubits, …])      | Create new snapshot instruction.                                         |
  | [`add_decomposition`](#qiskit.extensions.Snapshot.add_decomposition "qiskit.extensions.Snapshot.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.extensions.Snapshot.assemble "qiskit.extensions.Snapshot.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.extensions.Snapshot.broadcast_arguments "qiskit.extensions.Snapshot.broadcast_arguments")(qargs, cargs) | Validation of the arguments.                                             |
  | [`c_if`](#qiskit.extensions.Snapshot.c_if "qiskit.extensions.Snapshot.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`copy`](#qiskit.extensions.Snapshot.copy "qiskit.extensions.Snapshot.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.extensions.Snapshot.inverse "qiskit.extensions.Snapshot.inverse")()                                                 | Special case.                                                            |
  | [`is_parameterized`](#qiskit.extensions.Snapshot.is_parameterized "qiskit.extensions.Snapshot.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.extensions.Snapshot.mirror "qiskit.extensions.Snapshot.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`qasm`](#qiskit.extensions.Snapshot.qasm "qiskit.extensions.Snapshot.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.extensions.Snapshot.repeat "qiskit.extensions.Snapshot.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.extensions.Snapshot.reverse_ops "qiskit.extensions.Snapshot.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`validate_parameter`](#qiskit.extensions.Snapshot.validate_parameter "qiskit.extensions.Snapshot.validate_parameter")(parameter)       | Instruction parameters has no validation or normalization.               |

  ## Attributes

  |                                                                                                            |                                                                               |
  | ---------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.extensions.Snapshot.decompositions "qiskit.extensions.Snapshot.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.extensions.Snapshot.definition "qiskit.extensions.Snapshot.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.extensions.Snapshot.duration "qiskit.extensions.Snapshot.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.extensions.Snapshot.label "qiskit.extensions.Snapshot.label")                            | Return snapshot label                                                         |
  | [`params`](#qiskit.extensions.Snapshot.params "qiskit.extensions.Snapshot.params")                         | return instruction params.                                                    |
  | [`snapshot_type`](#qiskit.extensions.Snapshot.snapshot_type "qiskit.extensions.Snapshot.snapshot_type")    | Return snapshot type                                                          |
  | [`unit`](#qiskit.extensions.Snapshot.unit "qiskit.extensions.Snapshot.unit")                               | Get the time unit of duration.                                                |

  ## Members list

  ### add\_decomposition

  <Function id="qiskit.extensions.Snapshot.add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.extensions.Snapshot.assemble" signature="assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.extensions.Snapshot.broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.extensions.Snapshot.c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### copy

  <Function id="qiskit.extensions.Snapshot.copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Attribute id="qiskit.extensions.Snapshot.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.extensions.Snapshot.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.extensions.Snapshot.duration">
    Get the duration.
  </Attribute>

  ### inverse

  <Function id="qiskit.extensions.Snapshot.inverse" signature="inverse()">
    Special case. Return self.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.extensions.Snapshot.is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Attribute id="qiskit.extensions.Snapshot.label">
    Return snapshot label
  </Attribute>

  ### mirror

  <Function id="qiskit.extensions.Snapshot.mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Attribute id="qiskit.extensions.Snapshot.params">
    return instruction params.
  </Attribute>

  ### qasm

  <Function id="qiskit.extensions.Snapshot.qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.extensions.Snapshot.repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.extensions.Snapshot.reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### snapshot\_type

  <Attribute id="qiskit.extensions.Snapshot.snapshot_type">
    Return snapshot type
  </Attribute>

  ### unit

  <Attribute id="qiskit.extensions.Snapshot.unit">
    Get the time unit of duration.
  </Attribute>

  ### validate\_parameter

  <Function id="qiskit.extensions.Snapshot.validate_parameter" signature="validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>
</Class>

